Fix spacing issue on adjacent paragraphs

--- a/src/components/markdown/markdown.css
+++ b/src/components/markdown/markdown.css
@@ -49,6 +49,10 @@
       @apply .text-base .leading-relaxed;
     }
 
+    & + p {
+      @apply .mt-4;
+    }
+
     & + h4 {
       @apply .mt-4;
     }
